feat: use jdk21